# pequbot

./: README.rst  pequbot-channels-example.yaml  requirements.txt  setup.cfg
pequbot/: bot.py  query.py
