[metadata]
name = pequbot
summary = Periodic REST API query IRC bot
description-file =
    README.rst
author = Steve Baker
author-email = sbaker@redhat.com
home-page = https://github.com/steveb/pequbot
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[entry_points]
console_scripts =
    pequbot = pequbot.bot:main
    pequbot-test-queries = pequbot.query:main
